NOVAS ATUALIALIZACOES N APASTA ORIGEM DA CONCILIACAO

--- a/site de leitura de excel/index copy 2.html
+++ b/site de leitura de excel/index copy 2.html
@@ -9,7 +9,7 @@
 table { border-collapse: collapse; margin-bottom: 30px; }
 td, th { border: 1px solid #000; padding: 4px; cursor: pointer; }
 th { background: #eee; font-weight: bold; }
-.selected-row { background-color: #fffa90 !important; }
+.selected-column { background-color: #d0f0d0; }
 
 input[type=text] {
     width: 60px;
@@ -25,19 +25,6 @@ input[type=text] {
 
 button {
     margin-right: 5px;
-}
-
-#copiado-msg {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    background: #cfc;
-    padding: 10px 15px;
-    border: 1px solid #090;
-    border-radius: 5px;
-    display: none;
-    z-index: 9999;
-    font-weight: bold;
 }
 </style>
 </head>
@@ -81,8 +68,6 @@ button {
 
 <br>
 <div id="output"></div>
-
-<div id="copiado-msg">Copiado!</div>
 
 <script>
 
@@ -173,7 +158,6 @@ document.getElementById("inputExcel").addEventListener("change", function (e) {
 
         document.getElementById("output").innerHTML = html;
 
-        // Removida a marcação verde ao clicar na coluna para formatar
         document.querySelectorAll("td, th").forEach(cell => {
             cell.addEventListener("click", function () {
                 if (!currentFormat) return;
@@ -186,6 +170,8 @@ document.getElementById("inputExcel").addEventListener("change", function (e) {
                     else if (currentFormat === "value") td.textContent = formatValue(original);
                     else td.textContent = original;
                 });
+                table.querySelectorAll("td, th").forEach(x => x.classList.remove("selected-column"));
+                table.querySelectorAll(`[data-col="${col}"]`).forEach(x => x.classList.add("selected-column"));
             });
         });
 
@@ -313,7 +299,7 @@ function atualizarTotais() {
 }
 
 // -----------------------------
-// Salvar Excel (SEM LINHA 0)
+// Salvar Excel (CORRIGIDO + SEM LINHA 0)
 // -----------------------------
 document.getElementById("btnSalvar").addEventListener("click", () => {
     const tables = document.querySelectorAll("#output table");
@@ -324,7 +310,9 @@ document.getElementById("btnSalvar").addEventListener("click", () => {
         let data = [];
         const linhas = table.querySelectorAll("tr");
 
+        // COMEÇA DA LINHA 1 → A LINHA 0 (A B C ...) NÃO SERÁ SALVA
         for (let i = 1; i < linhas.length; i++) {
+
             if (i > 1 && linhas[i].style.display === "none") continue;
 
             const cells = linhas[i].querySelectorAll("th, td");
@@ -355,41 +343,8 @@ document.getElementById("btnSalvar").addEventListener("click", () => {
         let nomeArquivo = document.getElementById("inputExcel").files[0]?.name || "planilha.xlsx";
         XLSX.writeFile(workbook, nomeArquivo);
     });
-});
 
-// -----------------------------
-// Marcar/desmarcar linha inteira ao clicar (toggle)
-// -----------------------------
-document.querySelector("#output").addEventListener("click", function(e) {
-    const target = e.target;
-    if (target.tagName === "TD") {
-        const row = target.parentElement;
-        row.classList.toggle("selected-row");
-    }
-});
-
-// -----------------------------
-// Copiar célula ao dar duplo clique e marcar linha
-// -----------------------------
-document.querySelector("#output").addEventListener("dblclick", function(e) {
-    const target = e.target;
-    if (target.tagName === "TD") {
-        // Copiar célula
-        const texto = target.textContent.trim();
-        if (texto) {
-            navigator.clipboard.writeText(texto).then(() => {
-                const msg = document.getElementById("copiado-msg");
-                if (msg) {
-                    msg.textContent = `Copiado: ${texto}`;
-                    msg.style.display = "block";
-                    setTimeout(() => msg.style.display = "none", 1500);
-                }
-            }).catch(err => console.error("Erro ao copiar:", err));
-        }
-        // Marcar a linha inteira
-        const row = target.parentElement;
-        row.classList.toggle("selected-row");
-    }
+    
 });
 
 </script>
