--- a/site de leitura de excel/index copy 3.html
+++ b/site de leitura de excel/index copy 3.html
@@ -9,6 +9,7 @@
 table { border-collapse: collapse; margin-bottom: 30px; }
 td, th { border: 1px solid #000; padding: 4px; cursor: pointer; }
 th { background: #eee; font-weight: bold; }
+.selected-column { background-color: #d0f0d0; }
 .selected-row { background-color: #fffa90 !important; }
 
 input[type=text] {
@@ -173,7 +174,6 @@ document.getElementById("inputExcel").addEventListener("change", function (e) {
 
         document.getElementById("output").innerHTML = html;
 
-        // Removida a marcação verde ao clicar na coluna para formatar
         document.querySelectorAll("td, th").forEach(cell => {
             cell.addEventListener("click", function () {
                 if (!currentFormat) return;
@@ -186,6 +186,8 @@ document.getElementById("inputExcel").addEventListener("change", function (e) {
                     else if (currentFormat === "value") td.textContent = formatValue(original);
                     else td.textContent = original;
                 });
+                table.querySelectorAll("td, th").forEach(x => x.classList.remove("selected-column"));
+                table.querySelectorAll(`[data-col="${col}"]`).forEach(x => x.classList.add("selected-column"));
             });
         });
 
@@ -325,6 +327,7 @@ document.getElementById("btnSalvar").addEventListener("click", () => {
         const linhas = table.querySelectorAll("tr");
 
         for (let i = 1; i < linhas.length; i++) {
+
             if (i > 1 && linhas[i].style.display === "none") continue;
 
             const cells = linhas[i].querySelectorAll("th, td");
@@ -364,17 +367,16 @@ document.querySelector("#output").addEventListener("click", function(e) {
     const target = e.target;
     if (target.tagName === "TD") {
         const row = target.parentElement;
-        row.classList.toggle("selected-row");
+        row.classList.toggle("selected-row"); // alterna a classe
     }
 });
 
 // -----------------------------
-// Copiar célula ao dar duplo clique e marcar linha
+// Copiar célula ao dar duplo clique
 // -----------------------------
 document.querySelector("#output").addEventListener("dblclick", function(e) {
     const target = e.target;
     if (target.tagName === "TD") {
-        // Copiar célula
         const texto = target.textContent.trim();
         if (texto) {
             navigator.clipboard.writeText(texto).then(() => {
@@ -386,9 +388,6 @@ document.querySelector("#output").addEventListener("dblclick", function(e) {
                 }
             }).catch(err => console.error("Erro ao copiar:", err));
         }
-        // Marcar a linha inteira
-        const row = target.parentElement;
-        row.classList.toggle("selected-row");
     }
 });
 
